# phrase-hunter

./: LICENSE  README.md  app.py  requirements.txt  setup.cfg
phrasehunter/: game.py  phrase.py
src/: app.py
src/phrase_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/phrase_hunter_rlbrinkman.egg-info/: PKG-INFO  SOURCES.txt
src/phrasehunter/: __init__.py  game.py
