[metadata]
name = phrase-hunter
version = 0.1.0
author = Renee Louise Brinkman
author_email = reneebrinkman91@gmail.com
description = A simple game where you guess the letters of a phrase, similar to hangman
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reneebrinkman/phrase-hunter
project_urls =
    Bug Tracker = https://github.com/reneebrinkman/phrase-hunter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  phrase-hunter = phrasehunter:main
